# nothingverse

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  justfile  package-lock.json  package.json  tailwind.config.js  todo.org
.sqlx/: query-0825ab234d92fa5c031065c49a71a192f63803925e8582a579cf63571ba7e9b1.json  query-0d7f782614c6d626fd368a9de01e43b4353215cdb84731ba64b02b60b6be3ccb.json  query-0e35e59f0641c45f72a793332feac4b2533d9de1709d061fcbe49204639efa1f.json  query-166918903c33a1916c2bb8668b5b27b1817e587dc0721b4b3325d568b9b8e51f.json  query-1e9fa336d61b3fa1ffee8f01c1f46e5c0b6f48319517bebca5149c72e650ebe0.json  query-2918e5e6231c60e1eac200b072e4087acbf79a19ff67685809a207d7ed8dd36b.json  query-2e748b3f3c631a306d665a06844339ada3b92b1d81428d28ba52c96759e135cc.json  query-3664e9e26d036fb00b6f1a653539da3cbe0f6d6edc5ecb0f75b270d54ad30a2c.json  query-37cfedde533019e0eb547141ad6ad0fe70f9114c28889ce104288346343a41ca.json  query-3d4055ec8733dc8f4f0d41c7203634af1a2ac746ac9ca1daef400a5b469743a8.json  query-423ecedc4d20bde5c5d2c6caa215999cd18ae2b888da520e080d9b52d5c51e03.json  query-458f4d5a4ad3a491445051a85adbd66f6bcdac795cedd915d43f7a5f610716ef.json  query-4e841651a9ae90bb2545617b754df035e6900892d2b7501746564c3b1c89ed7d.json  query-5b018c8692e28b4fc3158159a5d4f79a452b7199566ae63b54b49100a02fe7fa.json  query-5c5cf828e42bb587af2c466f8b8300c725a32017d67fcbdb287a0949373e42a0.json  query-69debc05065ffcbcc2f944d5b61eb2bc213fbe916568bafd87305e68431ce088.json  query-6dc3352abaaa2d09747ce1fe955a818ab5fe64e8cd5cccaf4cfb43c84ede3c78.json  query-71db686865fd0beff0339eb6c240a3e2efcabe6c2468f707a3f53867a35659c2.json  query-7384a3e948d41d5b42ca51d2a4890e4b7ba405e34f18e42c1ee81a74227468f2.json  query-80b88b913ca9022d19b2b4b0fb288d1d056cdb89624e8077582ef8be623fe1c9.json  query-98c8305e95987b4b4da714b8c9de70acbfa9359c61f3d3db34fed8184dc8c497.json  query-9a042c41cf7c44dd0c2b6a046d11b0d818a5f45c26ea3a16cd73335e93f7d594.json  query-9f6e15fc614ff3a6a5dab89f965cdbc9bf648d332b9f4296562a608139e3a9a7.json  (+11 more)
migrations/: 20250224223002_initialize_database.sql  (+2 more)
(+39 files in other folders)
