[package]
name = "nothingverse"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama-derive-axum = "0.1.2"
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["macros"] }
clap = { version = "4.5.31", features = ["derive"] }
futures = "0.3.31"
ollama-rs = { version = "0.2.5", features = ["stream"] }
serde = "1.0.218"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
version_check = "0.9.5"
