[package]
name = "nothingverse"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.14.0"
askama_web = { version = "0.15.0", features = ["axum-0.8", "tracing-0.1"] }
axum = { version = "0.8.1", features = ["macros"] }
clap = { version = "4.5.31", features = ["derive"] }
futures = "0.3.31"
ollama-rs = { version = "0.3.0", features = ["stream"] }
serde = "1.0.218"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
